# Sandbox-labs

./: .gitignore  LICENSE  README.md
projects/binned-plot/: BinnedPlotter.py  README.md  pyproject.toml
projects/binned-plot/src/binned_plot/: __init__.py  binned_plotter.py  cli.py
projects/binned-plot/src/binned_plot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/bioimage-reader/: Imagereader.py
projects/histograms/: Histo plot.ipynb
projects/span-pip/: Spanselection_pipette.py
