[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binned-plot"
version = "0.1.0"
description = "Bio-image intensity data binning and time-series visualization toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Dr. Suyash Naik", email = "suyashanaik@gmail.com"}
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
binned-plot = "binned_plot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
